--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -46,16 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Erro ao carregar Excel: [Errno 2] No such file or directory: './data/baseTesteIXC.xlsx'\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -77,29 +70,317 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>razaoSocial</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Celular</th>\n",
+       "      <th>cpf_cnpj</th>\n",
+       "      <th>rg_ie</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Complemento</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idPlanoIXC</th>\n",
+       "      <th>idVencimentoIXC</th>\n",
+       "      <th>Login</th>\n",
+       "      <th>Senha</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1306</td>\n",
+       "      <td>Abelanio Veríssimo Peixoto</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>(45)991198914</td>\n",
+       "      <td>703.800.214-71</td>\n",
+       "      <td>Isento</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>Próximo ao cacimbão</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>abelanio@radios.com</td>\n",
+       "      <td>peixoto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>897</td>\n",
+       "      <td>Aclecia da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>(82)998127951</td>\n",
+       "      <td>126.947.984-97</td>\n",
+       "      <td>30234875</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Maria de Lurdes</td>\n",
+       "      <td>Próximo ao mirante</td>\n",
+       "      <td>S/N</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>aclecia@radios.com</td>\n",
+       "      <td>silva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1120</td>\n",
+       "      <td>Adeilton da Mata</td>\n",
+       "      <td>adeiltondamata@gmail.com</td>\n",
+       "      <td>(82)981229218</td>\n",
+       "      <td>023.013.974-40</td>\n",
+       "      <td>40259595</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Ass. Nova Esperança</td>\n",
+       "      <td>próximo a casa de farinha</td>\n",
+       "      <td>S/N</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>adeilton@radios.com</td>\n",
+       "      <td>mata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1524</td>\n",
+       "      <td>Adeilton da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>(82)982806750</td>\n",
+       "      <td>516.291.434-72</td>\n",
+       "      <td>3614522-0</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Gravatá</td>\n",
+       "      <td>Lote do Sr. Del</td>\n",
+       "      <td>S/N</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>adeiltonn@radios.com</td>\n",
+       "      <td>silva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1427</td>\n",
+       "      <td>Adeilton Teixeira de Lima</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>(82)999347915</td>\n",
+       "      <td>008.433.544-02</td>\n",
+       "      <td>36145220</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>João Lyra / Qd: A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N: 24</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>adeiltont@radios.com</td>\n",
+       "      <td>lima</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>618</th>\n",
+       "      <td>1530</td>\n",
+       "      <td>Yasmim emanuele correia da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>475.748.218-36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Rua marechal Floriano Peixoto</td>\n",
+       "      <td>próximo ao sindicato</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Mundo novo</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>yasmin@radios.com</td>\n",
+       "      <td>correia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619</th>\n",
+       "      <td>422</td>\n",
+       "      <td>Zaquel da Costa Firmino</td>\n",
+       "      <td>betania@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>117.410.574-77</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Ass. Eldorado dos Carajás</td>\n",
+       "      <td>mãe da Betânia</td>\n",
+       "      <td>s/n</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>zaquel</td>\n",
+       "      <td>costa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>1223</td>\n",
+       "      <td>Zélia Maria da Silva Oliveira</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.483.964-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>platô 3/ Q: 10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N:37</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>zelia@radios.com</td>\n",
+       "      <td>silva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>621</th>\n",
+       "      <td>387</td>\n",
+       "      <td>ZENILDA DE LIMA FREIRE</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>044.304.014-11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Assentamento Flor do Mundau</td>\n",
+       "      <td>irmã do dimas</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>zenilda@radios.com</td>\n",
+       "      <td>silva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>1036</td>\n",
+       "      <td>Zozima de Castro Santos</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>047.821.584-32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Benedito Lopes</td>\n",
+       "      <td>Próximo ao Mercadinho Oliveira</td>\n",
+       "      <td>N: 22</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>zozima@radios.com</td>\n",
+       "      <td>santos</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>623 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "       id                       razaoSocial                       Email  \\\n",
+       "0    1306        Abelanio Veríssimo Peixoto  radiosnettelecom@gmail.com   \n",
+       "1     897                  Aclecia da Silva  radiosnettelecom@gmail.com   \n",
+       "2    1120                  Adeilton da Mata    adeiltondamata@gmail.com   \n",
+       "3    1524                 Adeilton da Silva  radiosnettelecom@gmail.com   \n",
+       "4    1427         Adeilton Teixeira de Lima  radiosnettelecom@gmail.com   \n",
+       "..    ...                               ...                         ...   \n",
+       "618  1530  Yasmim emanuele correia da Silva  radiosnettelecom@gmail.com   \n",
+       "619   422           Zaquel da Costa Firmino           betania@gmail.com   \n",
+       "620  1223     Zélia Maria da Silva Oliveira  radiosnettelecom@gmail.com   \n",
+       "621   387            ZENILDA DE LIMA FREIRE  radiosnettelecom@gmail.com   \n",
+       "622  1036           Zozima de Castro Santos  radiosnettelecom@gmail.com   \n",
+       "\n",
+       "           Celular        cpf_cnpj      rg_ie  idCidade  \\\n",
+       "0    (45)991198914  703.800.214-71     Isento      1659   \n",
+       "1    (82)998127951  126.947.984-97   30234875      1659   \n",
+       "2    (82)981229218  023.013.974-40   40259595      1659   \n",
+       "3    (82)982806750  516.291.434-72  3614522-0      1659   \n",
+       "4    (82)999347915  008.433.544-02   36145220      1659   \n",
+       "..             ...             ...        ...       ...   \n",
+       "618            NaN  475.748.218-36        NaN      1659   \n",
+       "619            NaN  117.410.574-77        NaN      1659   \n",
+       "620            NaN  100.483.964-27        NaN      1659   \n",
+       "621            NaN  044.304.014-11        NaN      1659   \n",
+       "622            NaN  047.821.584-32        NaN      1659   \n",
+       "\n",
+       "                          Endereco                     Complemento Numero  \\\n",
+       "0               Vila São Sebastião             Próximo ao cacimbão      0   \n",
+       "1                  Maria de Lurdes              Próximo ao mirante    S/N   \n",
+       "2              Ass. Nova Esperança       próximo a casa de farinha    S/N   \n",
+       "3                          Gravatá                 Lote do Sr. Del    S/N   \n",
+       "4                João Lyra / Qd: A                             NaN  N: 24   \n",
+       "..                             ...                             ...    ...   \n",
+       "618  Rua marechal Floriano Peixoto            próximo ao sindicato    255   \n",
+       "619      Ass. Eldorado dos Carajás                  mãe da Betânia    s/n   \n",
+       "620                 platô 3/ Q: 10                             NaN   N:37   \n",
+       "621    Assentamento Flor do Mundau                   irmã do dimas     SN   \n",
+       "622                 Benedito Lopes  Próximo ao Mercadinho Oliveira  N: 22   \n",
+       "\n",
+       "                          Bairro        Cep  idPlanoIXC  idVencimentoIXC  \\\n",
+       "0                         Centro  57830-000         NaN              NaN   \n",
+       "1                         Centro  57830-000         NaN              NaN   \n",
+       "2                     Zona Rural  57830-000         NaN              NaN   \n",
+       "3                     Zona Rural  57830-000         NaN              NaN   \n",
+       "4    Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
+       "..                           ...        ...         ...              ...   \n",
+       "618                   Mundo novo  57830-000         NaN              NaN   \n",
+       "619                   Zona Rural  57830-000         NaN              NaN   \n",
+       "620  Conj. Raimundo Nonato Lopes  57830-000         NaN              NaN   \n",
+       "621                   Zona Rural  57830-000         NaN              NaN   \n",
+       "622                       Centro  57830-000         NaN              NaN   \n",
+       "\n",
+       "                    Login    Senha  \n",
+       "0     abelanio@radios.com  peixoto  \n",
+       "1      aclecia@radios.com    silva  \n",
+       "2     adeilton@radios.com     mata  \n",
+       "3    adeiltonn@radios.com    silva  \n",
+       "4    adeiltont@radios.com     lima  \n",
+       "..                    ...      ...  \n",
+       "618     yasmin@radios.com  correia  \n",
+       "619                zaquel    costa  \n",
+       "620      zelia@radios.com    silva  \n",
+       "621    zenilda@radios.com    silva  \n",
+       "622     zozima@radios.com   santos  \n",
+       "\n",
+       "[623 rows x 16 columns]"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Carregar o arquivo Excel\n",
-    "source = \"./data/baseTesteIXC.xlsx\"\n",
+    "source = \"../../data/baseTesteIXC.xlsx\"\n",
     "df = carregar_tabela_excel(source)\n",
-    "\n",
-    "display(df)"
+    "df"
    ]
   }
  ],
