--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -29,12 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from src.utils import carregar_tabela_excel"
+    "from src.utils import carregar_tabela_excel\n",
+    "from src.insert_client.insert_client import inserir_cliente"
    ]
   },
   {
