--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +69,7 @@
     "    'Celular',\n",
     "    'cpf_cnpj',\n",
     "    'rg_ie',\n",
+    "    'filial_id',\n",
     "    'idCidade',\n",
     "    'Endereco',\n",
     "    'Complemento',\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,18 +154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['razaoSocial', 'Email', 'Celular', 'cpf_cnpj', 'rg_ie', 'idCidade',\n",
-       "       'Endereco', 'Complemento', 'Numero', 'Bairro', 'Cep'],\n",
+       "Index(['razaoSocial', 'Email', 'Celular', 'cpf_cnpj', 'rg_ie', 'filial_id',\n",
+       "       'idCidade', 'Endereco', 'Complemento', 'Numero', 'Bairro', 'Cep'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,15 +225,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.head(10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,6 +444,7 @@
     "    celular = row[\"Celular\"]\n",
     "    cnpj_cpf = row[\"cpf_cnpj\"]\n",
     "    rg_ie = row[\"rg_ie\"]\n",
+    "    filial = row[\"filial_id\"]\n",
     "    cidade = row[\"idCidade\"] \n",
     "    endereco = row[\"Endereco\"]\n",
     "    complemento = row[\"Complemento\"]\n",
@@ -469,6 +462,7 @@
     "        complemento=complemento,\n",
     "        bairro=bairro,\n",
     "        cidade=cidade,\n",
+    "        filial=filial,\n",
     "        telefone_celular=celular,\n",
     "        email=email,\n",
     "        ie_identidade=rg_ie,\n",
