--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -406,9 +406,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>razaoSocial</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Celular</th>\n",
+       "      <th>cpf_cnpj</th>\n",
+       "      <th>rg_ie</th>\n",
+       "      <th>filial_id</th>\n",
+       "      <th>idCidade</th>\n",
+       "      <th>Endereco</th>\n",
+       "      <th>Complemento</th>\n",
+       "      <th>Numero</th>\n",
+       "      <th>Bairro</th>\n",
+       "      <th>Cep</th>\n",
+       "      <th>idClienteIXC</th>\n",
+       "      <th>statusInsercao</th>\n",
+       "      <th>logRetorno</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abelanio Veríssimo Peixoto</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>28999537513</td>\n",
+       "      <td>70380021471</td>\n",
+       "      <td>Isento</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Vila São Sebastião</td>\n",
+       "      <td>Próximo ao cacimbão</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>falha</td>\n",
+       "      <td>{'type': 'error', 'message': 'Este CNPJ/CPF já...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aclecia da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>8298155632</td>\n",
+       "      <td>12694798497</td>\n",
+       "      <td>30234875</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Maria de Lurdes</td>\n",
+       "      <td>Próximo ao mirante</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>falha</td>\n",
+       "      <td>{'type': 'error', 'message': 'Este CNPJ/CPF já...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adeilton da Mata</td>\n",
+       "      <td>adeiltondamata@gmail.com</td>\n",
+       "      <td>8287840401</td>\n",
+       "      <td>02301397440</td>\n",
+       "      <td>40259595</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Ass. Nova Esperança</td>\n",
+       "      <td>próximo a casa de farinha</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>falha</td>\n",
+       "      <td>{'type': 'error', 'message': 'Este CNPJ/CPF já...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adeilton da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82996596910</td>\n",
+       "      <td>51629143472</td>\n",
+       "      <td>3614522-0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Gravatá</td>\n",
+       "      <td>Lote do Sr. Del</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>falha</td>\n",
+       "      <td>{'type': 'error', 'message': 'Este CNPJ/CPF já...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adeilton Teixeira de Lima</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82981674711</td>\n",
+       "      <td>00843354402</td>\n",
+       "      <td>36145220</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>João Lyra / Qd: A</td>\n",
+       "      <td></td>\n",
+       "      <td>24</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>falha</td>\n",
+       "      <td>{'type': 'error', 'message': 'Este CNPJ/CPF já...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>618</th>\n",
+       "      <td>Yasmim emanuele correia da Silva</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82 9822157025</td>\n",
+       "      <td>47574821836</td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Rua marechal Floriano Peixoto</td>\n",
+       "      <td>próximo ao sindicato</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Mundo novo</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619</th>\n",
+       "      <td>Zaquel da Costa Firmino</td>\n",
+       "      <td>betania@gmail.com</td>\n",
+       "      <td>82981547921</td>\n",
+       "      <td>11741057477</td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Ass. Eldorado dos Carajás</td>\n",
+       "      <td>mãe da Betânia</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>Zélia Maria da Silva Oliveira</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82981478041</td>\n",
+       "      <td>10048396427</td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>platô 3/ Q: 10</td>\n",
+       "      <td></td>\n",
+       "      <td>37</td>\n",
+       "      <td>Conj. Raimundo Nonato Lopes</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>621</th>\n",
+       "      <td>ZENILDA DE LIMA FREIRE</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82982297108</td>\n",
+       "      <td>04430401411</td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Assentamento Flor do Mundau</td>\n",
+       "      <td>irmã do dimas</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Zona Rural</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>Zozima de Castro Santos</td>\n",
+       "      <td>radiosnettelecom@gmail.com</td>\n",
+       "      <td>82981146792</td>\n",
+       "      <td>04782158432</td>\n",
+       "      <td></td>\n",
+       "      <td>35</td>\n",
+       "      <td>1659</td>\n",
+       "      <td>Benedito Lopes</td>\n",
+       "      <td>Próximo ao Mercadinho Oliveira</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>57830-000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>591 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          razaoSocial                       Email  \\\n",
+       "0          Abelanio Veríssimo Peixoto  radiosnettelecom@gmail.com   \n",
+       "1                    Aclecia da Silva  radiosnettelecom@gmail.com   \n",
+       "2                    Adeilton da Mata    adeiltondamata@gmail.com   \n",
+       "3                   Adeilton da Silva  radiosnettelecom@gmail.com   \n",
+       "4           Adeilton Teixeira de Lima  radiosnettelecom@gmail.com   \n",
+       "..                                ...                         ...   \n",
+       "618  Yasmim emanuele correia da Silva  radiosnettelecom@gmail.com   \n",
+       "619           Zaquel da Costa Firmino           betania@gmail.com   \n",
+       "620     Zélia Maria da Silva Oliveira  radiosnettelecom@gmail.com   \n",
+       "621            ZENILDA DE LIMA FREIRE  radiosnettelecom@gmail.com   \n",
+       "622           Zozima de Castro Santos  radiosnettelecom@gmail.com   \n",
+       "\n",
+       "           Celular     cpf_cnpj      rg_ie  filial_id  idCidade  \\\n",
+       "0      28999537513  70380021471     Isento         35      1659   \n",
+       "1       8298155632  12694798497   30234875         35      1659   \n",
+       "2       8287840401  02301397440   40259595         35      1659   \n",
+       "3      82996596910  51629143472  3614522-0         35      1659   \n",
+       "4      82981674711  00843354402   36145220         35      1659   \n",
+       "..             ...          ...        ...        ...       ...   \n",
+       "618  82 9822157025  47574821836                    35      1659   \n",
+       "619    82981547921  11741057477                    35      1659   \n",
+       "620    82981478041  10048396427                    35      1659   \n",
+       "621    82982297108  04430401411                    35      1659   \n",
+       "622    82981146792  04782158432                    35      1659   \n",
+       "\n",
+       "                          Endereco                     Complemento Numero  \\\n",
+       "0               Vila São Sebastião             Próximo ao cacimbão      0   \n",
+       "1                  Maria de Lurdes              Próximo ao mirante     SN   \n",
+       "2              Ass. Nova Esperança       próximo a casa de farinha     SN   \n",
+       "3                          Gravatá                 Lote do Sr. Del     SN   \n",
+       "4                João Lyra / Qd: A                                     24   \n",
+       "..                             ...                             ...    ...   \n",
+       "618  Rua marechal Floriano Peixoto            próximo ao sindicato    255   \n",
+       "619      Ass. Eldorado dos Carajás                  mãe da Betânia     SN   \n",
+       "620                 platô 3/ Q: 10                                     37   \n",
+       "621    Assentamento Flor do Mundau                   irmã do dimas     SN   \n",
+       "622                 Benedito Lopes  Próximo ao Mercadinho Oliveira     22   \n",
+       "\n",
+       "                          Bairro        Cep idClienteIXC statusInsercao  \\\n",
+       "0                         Centro  57830-000         None          falha   \n",
+       "1                         Centro  57830-000         None          falha   \n",
+       "2                     Zona Rural  57830-000         None          falha   \n",
+       "3                     Zona Rural  57830-000         None          falha   \n",
+       "4    Conj. Raimundo Nonato Lopes  57830-000         None          falha   \n",
+       "..                           ...        ...          ...            ...   \n",
+       "618                   Mundo novo  57830-000         None           None   \n",
+       "619                   Zona Rural  57830-000         None           None   \n",
+       "620  Conj. Raimundo Nonato Lopes  57830-000         None           None   \n",
+       "621                   Zona Rural  57830-000         None           None   \n",
+       "622                       Centro  57830-000         None           None   \n",
+       "\n",
+       "                                            logRetorno  \n",
+       "0    {'type': 'error', 'message': 'Este CNPJ/CPF já...  \n",
+       "1    {'type': 'error', 'message': 'Este CNPJ/CPF já...  \n",
+       "2    {'type': 'error', 'message': 'Este CNPJ/CPF já...  \n",
+       "3    {'type': 'error', 'message': 'Este CNPJ/CPF já...  \n",
+       "4    {'type': 'error', 'message': 'Este CNPJ/CPF já...  \n",
+       "..                                                 ...  \n",
+       "618                                               None  \n",
+       "619                                               None  \n",
+       "620                                               None  \n",
+       "621                                               None  \n",
+       "622                                               None  \n",
+       "\n",
+       "[591 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
