--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,22 +206,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 OK\n",
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117583\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"22\\\\/12\\\\/2024\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919571\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# inserir_cliente(\n",
-    "#     razao=\"Cliente de Teste\",\n",
-    "#     cnpj_cpf=\"13864482496\",\n",
-    "#     cep=\"57160-000\",\n",
-    "#     endereco=\"Rua ABC\",\n",
-    "#     numero=\"123\",\n",
-    "#     bairro=\"Bairro XPTO\",\n",
-    "#     cidade=\"1659\",\n",
-    "#     uf=\"AL\",\n",
-    "#     telefone_celular=\"82999999999\",\n",
-    "#     email=\"teste@example.com\",\n",
-    "# )"
+    "inserir_cliente(\n",
+    "    razao=\"Cliente de Teste 2\",\n",
+    "    cnpj_cpf=\"28086842000127\",\n",
+    "    cep=\"57160-000\",\n",
+    "    endereco=\"Rua ABC\",\n",
+    "    numero=\"123\",\n",
+    "    bairro=\"Bairro XPTO\",\n",
+    "    filial_id=\"35\",\n",
+    "    cidade=\"1659\",\n",
+    "    uf=\"AL\",\n",
+    "    telefone_celular=\"82999999999\",\n",
+    "    email=\"teste@example.com\",\n",
+    ")"
    ]
   },
   {
@@ -352,6 +372,12 @@
     "    numero = row[\"Numero\"]\n",
     "    bairro = row[\"Bairro\"]\n",
     "    cep = row[\"Cep\"]\n",
+    "\n",
+    "    # Verifica o tamanho do cpf_cnpj_limpo para decidir o tipo_pessoa\n",
+    "    if len(cnpj_cpf) == 11:\n",
+    "        tipo_pessoa = \"F\"  # Pessoa Física\n",
+    "    else:\n",
+    "        tipo_pessoa = \"J\"  # Pessoa Jurídica\n",
     "    \n",
     "    # Chamamos a função inserir_cliente:\n",
     "    response = inserir_cliente(\n",
