--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,19 +237,19 @@
     }
    ],
    "source": [
-    "inserir_cliente(\n",
-    "    razao=\"Cliente de Teste 2\",\n",
-    "    cnpj_cpf=\"28086842000127\",\n",
-    "    cep=\"57160-000\",\n",
-    "    endereco=\"Rua ABC\",\n",
-    "    numero=\"123\",\n",
-    "    bairro=\"Bairro XPTO\",\n",
-    "    filial_id=\"35\",\n",
-    "    cidade=\"1659\",\n",
-    "    uf=\"AL\",\n",
-    "    telefone_celular=\"82999999999\",\n",
-    "    email=\"teste@example.com\",\n",
-    ")"
+    "# inserir_cliente(\n",
+    "#     razao=\"Cliente de Teste 2\",\n",
+    "#     cnpj_cpf=\"28086842000127\",\n",
+    "#     cep=\"57160-000\",\n",
+    "#     endereco=\"Rua ABC\",\n",
+    "#     numero=\"123\",\n",
+    "#     bairro=\"Bairro XPTO\",\n",
+    "#     filial_id=\"35\",\n",
+    "#     cidade=\"1659\",\n",
+    "#     uf=\"AL\",\n",
+    "#     telefone_celular=\"82999999999\",\n",
+    "#     email=\"teste@example.com\",\n",
+    "# )"
    ]
   },
   {
