--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -60,9 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = \"../../data/baseTesteIXC_Transform.xlsx\"\n",
+    "source_input = \"../../data/baseTesteIXC_Transform.xlsx\"\n",
+    "source_output = \"../../scr/inserted/cliente_insert.xlsx\"\n",
     "# Carregar o DataFrame com as colunas especificadas como strings\n",
-    "df = pd.read_excel(source, dtype={\n",
+    "df = pd.read_excel(source_input, dtype={\n",
     "    'cpf_cnpj': str,\n",
     "    'cep': str,\n",
     "    'numero': str,\n",
@@ -729,7 +730,7 @@
     }
    ],
    "source": [
-    "df"
+    "df.to_excel(source_output)"
    ]
   }
  ],
